# remote-browser-control

./: .gitignore  .mcp.json  README.md  install.bat  mqtt-bridge.js  package-lock.json  package.json  rbc-cf.js  rbc.js
cf-workers/: package.json  wrangler.toml
cf-workers/src/: device-room.js  index.js
extension/: background.js  content.js  manifest.json  mqtt.js  popup.html  popup.js
host/: Cargo.toml  com.kelvin.rbc.json
host/src/: bridge.rs  main.rs  mcp.rs  native_messaging.rs  tools.rs
